# jamjam

./: Cargo.toml  README.md
src/: crc32.rs  lib.rs  macros.rs
src/conversion/: mod.rs  pcboard_to_jam.rs
src/jam/: jhr_header.rs  last_read_storage.rs  mod.rs  msg_header.rs  tests.rs
src/pcboard/: base_header.rs  message_header.rs  message_index.rs  mod.rs  tests.rs
src/qwk/: mod.rs  qwk_message.rs
src/util/: basic_real.rs  crc32.rs  mod.rs
