[package]
name = "jamjam"
version = "0.1.0"
edition = "2021"
description = "Handles JAM & PCBOARD message bases"
authors = ["Mike Krüger <mkrueger@posteo.de>"]
homepage = "https://www.github.com/mkrueger/jamjam"
repository = "https://www.github.com/mkrueger/jamjam"
license-file = "LICENSE"
keywords = ["jam", "pcboard", "messagebase"]

[dependencies]
thiserror = "1.0.58"
rayon = "1.10.0"
log = "0.4.14"
chrono = "0.4.37"
rand = "0.8.4"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"